test/cli/test-deleting-policy/namespaced-scope/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- resource.yaml
results:
- isDeletingPolicy: true
  kind: Pod
  policy: team-a/delete-pods
  resources:
  - pod-in-team-a
  result: pass
